<resources>
    <string name="app_name">QPNP Nav Backlight Changer</string>

    <string name="brightness">Brightness</string>
    <string name="max_brightness">Max Brightness</string>
    <string name="trigger">Trigger</string>
    <string name="possible_triggers">Possible Triggers</string>
    <string name="apply_on_boot">Apply On Boot</string>
    <string name="apply">Apply</string>
</resources>
